Change cluster details to use the Accordion component and display status icon for each cluster

--- a/src-web/components/Topology/scss/topology-details.scss
+++ b/src-web/components/Topology/scss/topology-details.scss
@@ -228,14 +228,51 @@
         }
       }
 
-      .clusterDetailItem {
-        .pf-c-expandable-section {
-          .pf-c-expandable-section__content {
-            margin-top: 0px;
+      .pf-c-accordion {
+        --pf-c-accordion__toggle--m-expanded--before--BackgroundColor: #FFFFFF;
+        --pf-c-accordion__toggle--hover__toggle-text--Color: #000000;
+        --pf-c-accordion__toggle--active__toggle-text--Color: #000000;
+        --pf-c-accordion__toggle--focus__toggle-text--Color: #000000;
+        --pf-c-accordion__toggle--active__toggle-text--FontWeight: normal;
+        --pf-c-accordion__toggle--focus__toggle-text--FontWeight: normal;
+        
+        .clusterDetailItem {
+          .pf-c-accordion__toggle {
+            padding-left: 0px;
           }
 
-          .pf-c-expandable-section__toggle:focus {
+          .pf-c-accordion__toggle.pf-m-expanded {
+            .pf-c-accordion__toggle-text {
+              color: #000000;
+              font-weight: normal;
+            }
+          }
+          .pf-c-accordion__toggle:hover {
+            background-color: #FFFFFF;
+          }
+
+          .pf-c-accordion__toggle:active {
+            background-color: #FFFFFF;
+          }
+
+          .pf-c-accordion__toggle:focus {
+            background-color: #FFFFFF;
             outline-width: 0px;
+          }
+
+          .pf-c-accordion__toggle::after {
+            width: 0px;
+          }
+          
+          .pf-c-accordion__expanded-content.pf-m-expanded {
+            --pf-c-accordion__expanded-content-body--before--BackgroundColor: #FFFFFF;
+            .pf-c-accordion__expanded-content-body {
+              padding-left: 0px;
+              padding-top: 0px;
+            }
+            .pf-c-accordion__expanded-content-body::after {
+              width: 0px;
+            }
           }
         }
       }
@@ -281,6 +318,7 @@
         --pf-c-accordion__toggle--focus__toggle-text--Color: #000000;
         --pf-c-accordion__toggle--active__toggle-text--FontWeight: normal;
         --pf-c-accordion__toggle--focus__toggle-text--FontWeight: normal;
+
         .appDetailItem {
           .pf-c-accordion__toggle {
             padding-left: 0px;
@@ -321,8 +359,6 @@
           }
         }
       }
-
-      
     }
   }
 
