--- a/src-web/components/ApplicationDeploymentHighlights/ApplicationDeploymentHighlightsTerminology/style.scss
+++ b/src-web/components/ApplicationDeploymentHighlights/ApplicationDeploymentHighlightsTerminology/style.scss
@@ -61,7 +61,7 @@
   .deployment-highlights-terminology-docs {
     text-align: right;
     display: inline-block;
-    padding: 1rem 1rem 0.75rem;
+    padding: 1.5rem 1rem 0;
     width: 100%;
   }
 
