--- a/src-web/components/Topology/scss/topology-controls.scss
+++ b/src-web/components/Topology/scss/topology-controls.scss
@@ -41,6 +41,10 @@
         margin-left: 5px;
       }
     }
+
+    .pf-c-input-group {
+      max-width: 100%;
+    }
   }
 
   .topology-type-filter-bar {
