--- a/src-web/components/common/OverviewCards/style.scss
+++ b/src-web/components/common/OverviewCards/style.scss
@@ -111,7 +111,7 @@
   // Subscription cards
   .sub-card-container {
     width: 100%;
-    height: 99px;
+    height: 6.75rem;
     display: grid;
     margin-top: 16px;
     font-size: 14px;
