squash for signoff
Signed-off-by: Richie Piya <rpiyasirisilp@gmail.com>

--- a/src-web/components/common/OverviewCards/style.scss
+++ b/src-web/components/common/OverviewCards/style.scss
@@ -18,8 +18,8 @@
     color: #0066cc;
   }
 
-  // Cluster resource status icons
-  .resource-status-help-icon {
+  // ? help icons
+  .help-icon {
     fill: #0066cc;
     margin-left: 4px;
     cursor: pointer;
