Add S3 region to the application editor
Signed-off-by: sahare <sahare@redhat.com>

--- a/src-web/components/ApplicationCreationPage/templates/template.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/template.hbs
@@ -137,6 +137,7 @@ spec:
   objectstoreURL=../../objectstoreURL
   accessKey=../../accessKey
   secretKey=../../secretKey
+  region=../../region
   ansibleSecretName=../../ansibleSecretName
   selfLinks=../../selfLinks
   uniqueGroupID=../../uniqueGroupID
