--- a/src-web/components/ApplicationCreationPage/templates/templateObjectStore.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/templateObjectStore.hbs
@@ -39,6 +39,9 @@ metadata:
 data:
   AccessKeyID: {{{accessKey}}}
   SecretAccessKey: {{{secretKey}}}
+  {{#if region}}
+  Region: '{{{region}}}'
+  {{/if}}
 {{/if}} 
 {{/unless}}      
 ---
