--- a/src-web/components/ApplicationCreationPage/style.scss
+++ b/src-web/components/ApplicationCreationPage/style.scss
@@ -30,16 +30,16 @@
 }
 
 // On app edit page
-.secondary-header-wrapper.with-tabs.with-breadcrumbs ~ .pf-c-page__main-section {
+.pf-c-page__main-section.editApplication {
   .temptifly {
 
     &.showEditor {
-      margin: 0px 0 -4.125rem 0;
+      margin: -20px 0 -4.125rem 0;
     }
 
     .creation-view-split-container {
       &.showEditor {
-        height: calc(100vh - 208px);
+        height: calc(100vh - 216px);
 
         .creation-view-controls-container {
           padding-top: 0px;
