UI components update (#1187)
* Update ui-components
Update PF
Full-width tables

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Remove sidebar calc adjustments

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Remove header-box-shadow

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Remove unneeded secondary header styling

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Fix template editor height/position

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Fix topologyDetails z-index

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Restore YAML editor buttons

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Remove old Cypress references to secondary-header classes

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Update snapshots

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Update SecondaryHeader test

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Update for changes in TimePicker
Use Select instead of AcmSelect
Update snapshot tests

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Update ui-components

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Update package lock after rebase

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Update snapshot tests

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

--- a/scss/secondary-header.scss
+++ b/scss/secondary-header.scss
@@ -10,103 +10,9 @@
 // Copyright Contributors to the Open Cluster Management project
 @import 'variables';
 
-.secondary-header {
-  position: fixed;
-  border-bottom: 1px solid var(--pf-global--BorderColor--100);
-
-  .pf-c-divider {
-    z-index: 1;
-  }
-
-  // PF dropdown
-  #refresh-icon,
-  #refresh-dropdown,
-  .pf-c-dropdown__menu-item {
-    font-size: var(--pf-global--FontSize--sm);
-  }
-
-  .pf-c-dropdown__toggle-icon {
-    margin-left: 0.5rem;
-  }
-
-  p {
-    font-size: var(--pf-global--FontSize--xs);
-  }
-
-  // YAML toggle
-  .switch-controls {
-    position: absolute;
-    display: inline-flex;
-    width: 100%;
-    padding-top: 6px;
-  }
-
-  &-links {
-    position: fixed;
-    right: 5%;
-    top: 7.25rem;
-    display: flex;
-    z-index: 6001;
-
-    .portal {
-      padding-left: 1rem;
-    }
-  }
-
-  &.simple-header {
-    position: fixed;
-    width: 100%;
-    background-color: #fff;
-    height: $secondary-header-min-height;
-    padding: 0.75rem 5% 0;
-  }
-
-  &-actions {
-    position: fixed;
-    float: right;
-    top: 7rem;
-    right: 5%;
-    z-index: 6001;
+.secondary-header-links {
+  display: flex;
+  div {
+    margin-left: 16px
   }
 }
-
-.secondary-header-wrapper {
-  position: relative;
-  width: 100%;
-  z-index: 1000;
-}
-
-.secondary-header-wrapper-min {
-  @extend .secondary-header-wrapper;
-  height: $secondary-header-min-wrapper;
-}
-
-.secondary-header-wrapper.with-breadcrumbs {
-  @extend .secondary-header-wrapper;
-  height: $secondary-header-min-wrapper;
-}
-
-.secondary-header-wrapper.with-tabs {
-  @extend .secondary-header-wrapper;
-  height: $secondary-header-med-wrapper;
-}
-
-.secondary-header-wrapper.with-tabs.with-breadcrumbs {
-  @extend .secondary-header-wrapper;
-  height: $secondary-header-max-wrapper;
-}
-
-.secondary-header-tooltip-icon {
-  margin-left: 1rem;
-}
-
-.secondary-header-tooltip {
-  transform: translateY(0.5rem);
-
-  .secondary-header-tooltip-content,
-  .secondary-header-tooltip-link {
-    display: block;
-    padding: 0.5rem;
-  }
-}
- 
