--- a/scss/common.scss
+++ b/scss/common.scss
@@ -123,6 +123,10 @@ body {
 
 .pf-c-page__main {
   display: inline;
+
+  .pf-c-page__main-group.pf-m-sticky-top {
+    z-index: 1001;
+  }
 }
 
 .content-spinner {
