Add subfolder path for object bucket repositories
Signed-off-by: sahare <sahare@redhat.com>

--- a/src-web/components/ApplicationCreationPage/templates/template.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/template.hbs
@@ -138,6 +138,7 @@ spec:
   accessKey=../../accessKey
   secretKey=../../secretKey
   region=../../region
+  subfolder=../../subfolder
   ansibleSecretName=../../ansibleSecretName
   selfLinks=../../selfLinks
   uniqueGroupID=../../uniqueGroupID
