--- a/src-web/components/ApplicationCreationPage/templates/templateObjectStore.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/templateObjectStore.hbs
@@ -48,6 +48,8 @@ data:
 apiVersion: apps.open-cluster-management.io/v1
 kind: Subscription
 metadata:
+  annotations:
+    apps.open-cluster-management.io/bucket-path: '{{{subfolder}}}'
   labels:
     app: {{{@root.name}}}
   name: {{{@root.name}}}-subscription-{{uniqueGroupID}}
