update link icons and colors
Signed-off-by: Richie Piya <rpiyasirisilp@gmail.com>

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -32,7 +32,7 @@ $overview-card-margin-bottom: 46px !default; /* margin around cards */
 
 //These are carbon colors in previous version but will not in latest carbon 10
 $ibm-colors__gray--40: #a4a4a4 !default;
-$color__blue-51: #3d70b2 !default;
+$color__blue-51: #0066CC !default;
 $color__gray-1: #DFE3E6 !default;
 $color__navy-gray-8: #dfe6eb !default; 
 $color__green-40: #5aa700 !default;
