--- a/src-web/components/Topology/scss/topology-details.scss
+++ b/src-web/components/Topology/scss/topology-details.scss
@@ -144,7 +144,7 @@
       width: 120px;
       height: 100px;
       text-align: center;
-      color: #3d70b2;
+      color: #0066CC;
       font-size: 12px;
       line-height: 16px;
       align-content: flex-end;
