--- a/src-web/components/Topology/scss/topology-diagram.scss
+++ b/src-web/components/Topology/scss/topology-diagram.scss
@@ -153,7 +153,7 @@
       }
 
       &.selected {
-        border-left: 4px solid #3d70b2;
+        border-left: 4px solid #0066CC;
         background-color: #f3f7fb;
       }
     }
