--- a/src-web/components/Topology/scss/variables.scss
+++ b/src-web/components/Topology/scss/variables.scss
@@ -37,7 +37,7 @@ $ibm-colors__gray--40: #a4a4a4 !default;
 $color__blue-30: #5aaafa !default;
 $color__blue-40: #5596e6 !default;
 $color__blue-50: #4178be !default;
-$color__blue-51: #3d70b2 !default;
+$color__blue-51: #0066CC !default;
 $color__blue-60: #325c80 !default;
 $color__blue-90: #152935 !default;
 $color__gray-1: #DFE3E6 !default;
