--- a/src-web/components/ArgoCreationPage/templates/template.hbs
+++ b/src-web/components/ArgoCreationPage/templates/template.hbs
@@ -3,29 +3,58 @@
 {{! ==================Application ============================ }}
 {{! ========================================================== }}
 {{! ========================================================== }}
-{{#if userDefinedNamespace}}
-apiVersion: v1                    
-kind: Namespace
-metadata:
-  name: {{{namespace}}}                             
----
-{{/if}}
-apiVersion: app.k8s.io/v1beta1
-kind: Application
+                         
+
+apiVersion: argoproj.io/v1alpha1
+kind: ApplicationSet
 metadata:
   name: {{{appSetName}}}
-  namespace: {{{namespace}}}
-  {{#if selfLink}}
-  selfLink: {{{selfLink}}}
-  {{/if}}
 spec:
-  componentKinds:
-  - group: apps.open-cluster-management.io
-    kind: Subscription
-  descriptor: {}
-  selector:
-    matchExpressions:
-      - key: app
-        operator: In
-        values: 
-          - {{{name}}}
+ generators:
+ - clusterDecisionResource:
+    configMapRef: acm-placement
+    name: {{{decisionResourceName}}}                  
+    requeueAfterSeconds: {{{requeueTime}}}
+template:
+  metadata:
+    name: {{{clusterName}}} 
+  spec:
+    project: "default"
+    source:
+      repoURL: TBD
+      targetRevision: TBD
+      path: TBD
+    destination:
+      server: TBD
+      namespace: {{{destinationNS}}}
+    syncPolicy:
+      automated:
+      {{#if prune}}
+        prune: true
+      {{/if}}
+      {{#if allowEmpty}}
+        allowEmpty: true
+      {{/if}}
+      {{#if selfHeal}}
+        selfHeal: true
+      {{/if}}
+      syncOptions:
+        {{#if validate}}
+          - Validate=true
+        {{/if}}
+        {{#if pruneLast}}
+          - PruneLast=true
+        {{/if}}
+        {{#if replace}}
+          - Replace=true
+        {{/if}}
+        {{#if createNamespace}}
+          - CreateNamespace=true
+        {{/if}}
+        {{#if applyOutOfSyncOnly}}
+          - ApplyOutOfSyncOnly=true
+        {{/if}}
+        {{#if prunePropagationPolicy}}
+          - PrunePropagationPolicy=true
+        {{/if}}
+
