Add github channel
Signed-off-by: Maggie Chen <magchen@redhat.com>

--- a/src-web/components/ArgoCreationPage/templates/template.hbs
+++ b/src-web/components/ArgoCreationPage/templates/template.hbs
@@ -21,9 +21,29 @@ spec:
     spec:
       project: "default"
       source:
-        repoURL: TBD
-        targetRevision: TBD
-        path: TBD
+
+      
+{{#each channels}}
+
+{{#switch channelType}}
+
+{{! ========================================================== }}
+{{! ========================================================== }}
+{{! ==================Github channel ========================= }}
+{{! ========================================================== }}
+{{! ========================================================== }}
+{{#case 'github'}}
+
+{{>templateGit 
+  githubURL=../../githubURL
+  githubPath=../../githubPath
+  gitRevision=../../gitRevision
+}}
+{{/case}}
+
+{{/switch}}
+{{/each}}
+
       destination:
         server: TBD
         namespace: {{{destinationNS}}}
