--- a/src-web/components/ArgoCreationPage/templates/templateGit.hbs
+++ b/src-web/components/ArgoCreationPage/templates/templateGit.hbs
@@ -4,5 +4,5 @@
 {{! ========================================================== }}
 {{! ========================================================== }}
         repoURL: {{{githubURL}}}
-        targetRevision: {{gitRevision}}
+        targetRevision: {{{githubBranch}}}
         path: {{{githubPath}}}
