--- a/scss/time-window-labels.scss
+++ b/scss/time-window-labels.scss
@@ -4,13 +4,12 @@
 
 .timeWindow-labels {
   .timeWindow-status-icon {
-    font-size: 12px;
     text-transform: capitalize;
   }
 }
 
 .timeWindow-labels-popover-content {
-  padding: 6% 7% 7%;
+  padding: 1rem 4rem 1rem 1rem;
 
   .timeWindow-title {
     font-weight: 600;
