fix selflinks --no-verify
Signed-off-by: Maggie Chen <magchen@redhat.com>

--- a/src-web/components/ArgoCreationPage/templates/template.hbs
+++ b/src-web/components/ArgoCreationPage/templates/template.hbs
@@ -10,6 +10,9 @@ kind: ApplicationSet
 metadata:
   name: {{{appSetName}}}
   namespace: {{{argoServer}}}
+  {{#if selfLink}}
+  selfLink: {{{selfLink}}}
+  {{/if}}
 spec:
   generators:
     - clusterDecisionResource:
