--- a/src-web/components/ArgoCreationPage/templates/templateGit.hbs
+++ b/src-web/components/ArgoCreationPage/templates/templateGit.hbs
@@ -47,3 +47,27 @@
             - PrunePropagationPolicy={{{propagationPolicy}}}
             {{/if}}
           {{/if}}
+
+{{#unless channelNamespace}}
+{{#unless channelNamespaceExists}}
+---
+apiVersion: v1                      
+kind: Namespace
+metadata:
+  name: {{{channelName}}}-ns
+{{/unless}}
+---
+apiVersion: apps.open-cluster-management.io/v1
+kind: Channel
+metadata:
+  name: {{{channelName}}}
+  namespace: {{{channelName}}}-ns
+  {{#if selfLinks}}
+  selfLink: {{{selfLinks.Channel}}}
+  {{/if}}
+spec:
+  type: Git
+{{#if githubURL}}
+  pathname: '{{{githubURL}}}'
+{{/if}}
+{{/unless}}     
