Fix placement yaml
Signed-off-by: Maggie Chen <magchen@redhat.com>

--- a/src-web/components/ArgoCreationPage/templates/template.hbs
+++ b/src-web/components/ArgoCreationPage/templates/template.hbs
@@ -116,15 +116,14 @@ metadata:
   {{/if}}
 {{#if clusterSelector.mode}}  
 spec:
-  clusterSelector:
-    matchLabels:
-      {{#each clusterSelector.clusterLabelsList}}
-      {{#if validValue}}
-      '{{{labelName}}}': '{{{labelValue}}}'
-      {{/if}}
-      {{/each}} 
-  clusterConditions:
-    - type: ManagedClusterConditionAvailable
-      status: "True"
+  predicates:
+  - requiredClusterSelector:
+      labelSelector:
+        matchLabels:
+          {{#each clusterSelector.clusterLabelsList}}
+          {{#if validValue}}
+          {{{labelName}}}: {{{labelValue}}}
+          {{/if}}
+          {{/each}} 
 {{/if}}
 {{/unless}}
