Placement yaml fix (#1428)
* Placement bug fix

Signed-off-by: randybrunopiverger <rbrunopi@redhat.com>

* template typo

Signed-off-by: randybrunopiverger <rbrunopi@redhat.com>

* undefined check

Signed-off-by: randybrunopiverger <rbrunopi@redhat.com>

* unneeded method

Signed-off-by: randybrunopiverger <rbrunopi@redhat.com>

* test fix

Signed-off-by: randybrunopiverger <rbrunopi@redhat.com>

--- a/src-web/components/ApplicationCreationPage/templates/templatePlacement.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/templatePlacement.hbs
@@ -9,9 +9,13 @@
       kind: PlacementRule
 {{#if selectedRuleName}}
       name: {{{selectedRuleName}}}
-{{else}}       
+{{else}}
+    {{#unless existingrule-checkbox}}       
       name: {{{@root.name}}}-placement-{{uniqueGroupID}}
-{{/if}}       
+    {{else}}
+      name:
+    {{/unless}}
+{{/if}}
 {{#if timeWindow.mode}}
   timewindow:
     windowtype: {{{timeWindow.mode}}}
@@ -64,4 +68,3 @@ spec:
   {{/if}}
 {{/if}}
 {{/unless}}
-
